crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_mutability_specifiers/functions/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single mutability specifier can be provided.
   ╭─[input.sol:5:23]
   │
 5 │   function foo() pure view returns (uint) {
   │                       ──┬─  
   │                         ╰─── Error occurred here.
───╯
